fixed icon stretching using style.css

--- a/style.css
+++ b/style.css
@@ -5,3 +5,8 @@
   text-align: center;
 }
 
+img {
+  width: 50px;
+  height: 50px;
+  
+}
